<resources>
    <string name="app_name">SealRTC</string>
    <string name="loading">Loading...</string>
    <string name="setting_title">Setting</string>
    <string name="setting_back">Back</string>
    <string name="setting_reset">Reset</string>
    <string name="setting_done">Save</string>
    <string name="setting_preview">Preview</string>
    <string name="setting_export">Export</string>
    <string name="room_description">Input Room Info</string>
    <string name="room_userName">please enter user name</string>
    <string name="blink_description">Welcome to SealRTC Audio/Video Meeting</string>
    <string name="blink_description_version">SealRTC V</string>
    <string name="debug_select_dialog_message">Select a network</string>
    <string name="debug_select_dialog_exbutton">Prod</string>
    <string name="debug_select_dialog_innerbutton">Dev</string>
    <string name="debug_select_dialog_testbutton">Test</string>
    <string name="debug_select_dialog_oraclebutton">Oracle</string>
    <string name="debug_select_dialog_shanchatbutton">Tulin</string>
    <string name="room_input_hint">Room ID</string>
    <string name="room_input_hint_username">User Name</string>
    <string name="room_connect_button">Join Room</string>
    <string name="room_number">Room:</string>
    <string name="connection_duration">Duration</string>
    <string name="network_traffic">Traffic</string>
    <string name="network_traffic_receive">Rcv:</string>
    <string name="network_traffic_send">Send:</string>
    <string name="waiting_user_join">Waiting for attendees...</string>
    <string name="network_tip">The network state of %s is not good！</string>
    <string name="room_join_observer">Observer mode to join</string>
    <string name="room_join_close_camera">Audio mode to join</string>
    <string name="blink_copyright">Beijing Rongcloud Network Technology Co. , Ltd</string>
    <string name="settings_text_observer">Observer Mode</string>
    <string name="settings_text_observer_yes">Yes</string>
    <string name="settings_text_observer_no">No</string>
    <string name="settings_text_media_url">Media Server URL</string>
    <string name="settings_text_gpufliter">Beauty</string>
    <string name="settings_text_srtp">SRTP</string>
    <string name="settings_text_connection">Quic</string>
    <string name="settings_text_gpufliter_yes">Yes</string>
    <string name="settings_text_gpufliter_no">No</string>
    <string name="settings_text_min_rate">Minimum Rate</string>
    <string name="settings_text_rate">Rate</string>
    <string name="settings_text_connection_mode">Connection Mode</string>
    <string name="settings_text_connection_mode_relay">Relay</string>
    <string name="settings_text_connection_mode_P2P">P2P</string>
    <string name="settings_text_coding_mode">Coding Mode</string>
    <string name="settings_text_resolution">Resolution Ratio</string>
    <string name="settings_text_fps">FPS</string>
    <string name="settings_text_connectionType_quic">Yes</string>
    <string name="settings_text_connectionType_tcp">No</string>
    <string name="settings_text_userid">User ID (long press to copy to clipboard)</string>
    <string name="settings_text_copy_userid">User ID copied to clipboard</string>
    <string name="meeting_control_invite_url">meeting invitation:\n\n Please enter the following conference ID to join the conference \n Conference ID:%1$s \n \nIf you haven not installed the client yet, use Chrome or Safari 11 to open the following address to join the meeting:\nConference address:%2$s</string>
    <string name="meeting_control_invite_tips">The meeting address has been copied. Please paste it into any communication tool and send it to the person you want to invite.</string>
    <string name="meeting_control_inviteToOpen_camera">The host invited you to open the camera\nDo you accept it?</string>
    <string name="meeting_control_inviteToOpen_microphone">Moderator invites you to open the microphone \n Accept?</string>
    <string name="meeting_control_inviteToUpgrade">The host invites you to participate in the discussion\nDo you accept it?</string>
    <string name="meeting_control_destroy_whiteBoard">Whiteboard will be destroyed after exiting\nDo you want to exit?</string>
    <string name="meeting_control_no_whiteBoard">There is currently no whiteboard to view, please wait for others to create a whiteboard</string>
    <string name="meeting_control_OpenWiteBoard">Recommended horizontal screen, can see more clearly</string>
    <string name="settings_text_serverConfig">Server Settings</string>
    <string name="settings_text_serverCMP">Server CMP address</string>
    <string name="settings_text_serverURL_TOKEN">Server Token address</string>
    <string name="settings_text_APPId">APPID</string>
    <string name="settings_text_confirm">save</string>
    <string name="settings_text_cancel">cancel</string>
    <string name="btnsolpstr">Please do not click repeatedly</string>
    <string name="saveSuccess">Saved successfully!</string>
    <string name="app_btn_loading">initializing</string>
    <string name="Waitingforinput">Please enter the conference room name and user name!</string>
    <string name="Thecurrentnetworkisnotavailable">The current network is unavailable!</string>
    <string name="serverCMPToast">Please enter the format of the server CMP address!</string>
    <string name="serverCMPcannotbeempty">Server CMP address cannot be empty!</string>
    <string name="serverTOKENcannotbeempty">The server Token address cannot be empty!</string>
    <string name="tokenAddressisINcorrect">The server Token address is incorrect!</string>
    <string name="pleasetryagain">Failed to get token/deviceID. Please try again!</string>
    <string name="Createdawhiteboard">Created a whiteboard!</string>
    <string name="resolutionmunimum">Resolution has been reduced to a minimum!</string>
    <string name="resolutionhighest">Resolution has risen to the highest!</string>
    <string name="plsopenit">Has been banned, please open it manually!</string>
    <string name="PermissionStr">Permission :</string>
    <string name="Requestsentsuccessfully">Request sent successfully！</string>
    <string name="Requestfailedtosend">Request failed to send！Code=</string>
    <string name="Failedtogetinvitationlink">Failed to get invitation link！</string>
    <string name="Youbecomethehostofthemeeting">You become the host of the meeting</string>
    <string name="removedfromthecoversation">You have been removed from the conversation by the host！</string>
    <string name="plscalllater">The host is busy, please call later</string>
    <string name="downgradedtoanobserver">You have been downgraded to an observer by the moderator</string>
    <string name="userdowngradedtoanobserver">has been downgraded to observer by the moderator</string>
    <string name="userstr">User:</string>
    <string name="becomesthemeetinghost">becomes the meeting host</string>
    <string name="Agree">Agree</string>
    <string name="Refuse">Refuse</string>
    <string name="Upgradetonormaluser">Upgrade to normal user</string>
    <string name="settings_text_MediaStreamTiny_yes">Yes</string>
    <string name="settings_text_MediaStreamTiny_no">No</string>
    <string name="Opensizestream">Size Stream</string>
    <string name="autotest">Auto Test</string>
    <string name="watermark">Water Mark</string>
    <string name="islive">is Live</string>
    <string name="stereo">stereo</string>
    <string name="audio_process">audio_process</string>
    <string name="get_code">Get Code</string>
    <string name="VerificationCodeError">The verification code is wrong, please re-acquire</string>
    <string name="input_roomId">Please enter the room ID!</string>
    <string name="input_room_phoneNum">Please enter the phone number!</string>
    <string name="input_room_phoneNum_error">Wrong format of phone number!</string>
    <string name="SendVerificationCode">Get Code</string>
    <string name="MobilePhoneVerificationCode">Code</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="PhoneNumberLoginTips">Please enter the mobile phone number to verify login.</string>
    <string name="login">Verify login</string>
    <string name="verify_code_sent_prompt">Verification code sent.</string>
    <string name="verify_code_sent_prompt_failed">Verification code sent failed. Try again later.</string>
    <string name="verify_code_sent_prompt_error">Verification code sent failed, please check your network</string>
    <string name="verify_code_success">Verification success,enjoy the meeting.</string>
    <string name="verify_code_expired">Verification code expired</string>
    <string name="join_room_success">join room success</string>
    <string name="join_room_failed">join room failed</string>
    <string name="quit_room_success">quit room success</string>
    <string name="im_connect_failed">IM connected failed</string>
    <string name="room_actor_me">Me</string>
    <string name="room_online_status">Online number</string>
    <string name="room_online_members">Online number（%d）</string>
    <string name="rtc_close">Close</string>
    <string name="rtc_join_room">join in room</string>
    <string name="rtc_quit_room">quit room</string>
    <string name="rtc_user_offline">offline</string>
    <string name="back">back</string>
    <string name="select_country">Countries/Regions</string>
    <string name="select_country_hint">Countries/Regions </string>
    <string name="search_hint">search</string>
    <string name="mode_audio">Audio mode</string>
    <string name="mode_audio_video">Video mode</string>
    <string name="mode_observer">Observer mode</string>
    <string name="verify_code_invalid">Invalid verification code</string>
    <string name="user_video_custom">Customize video</string>
    <string name="username_empty_hint">User name cannot be empty</string>
    <string name="white_board_service_error">white board service error,please try again later</string>
    <string name="white_board_loading">white board loading...</string>
    <string name="white_board_pencil">pencil</string>
    <string name="white_board_text">text</string>
    <string name="white_board_eraser">eraser</string>
    <string name="white_board_clear">clear</string>
    <string name="white_board_add">add</string>
    <string name="white_board_delete">delete</string>
    <string name="white_board_room_not_exist">white board room not exist</string>
    <string name="publish_failed">Publish failed</string>
    <string name="publish_disabled">A video file has been posted in the room</string>
    <string name="join_room_observer_prompt">join_room_observer_prompt</string>
    <string name="join_room_audio_only_prompt">join_room_audio_only_prompt</string>
    <string name="rtc_status_im_error">IM disconnected</string>
    <string name="rtc_dialog_ok">OK</string>
    <string name="rtc_dialog_cancel">Cancel</string>
    <string name="rtc_dialog_kicked_offline">Your account logged in the other device ，please change your account to try later</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">cancel</string>
    <string name="rtc_unstable_call_connection">Unstable call connection</string>
    <string name="loacation_download">Local Download</string>
    <string name="browser_download">Open By Browser</string>
    <string name="apk_update_title">V%s version detected, update?</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="private_navserver_address">Private NavServer address</string>
    <string name="appsecret">AppSecret</string>
    <string name="appkey">AppKey</string>
    <string name="private_address_hint">http(s)://cn.xxx.com or IP + port address</string>
    <string name="private_server_api_address">Private Server API address</string>
    <string name="private_media_server_address">Private MediaServer address(Optional)</string>
    <string name="save">Save</string>
</resources>