<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:visibility="gone">

    <Button
        android:id="@+id/white_action_pencil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/selector_white_board_action_pencil"
        android:text="@string/white_board_pencil" />

    <Button
        android:id="@+id/white_action_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/selector_white_board_action_text"
        android:text="@string/white_board_text" />

    <Button
        android:id="@+id/white_action_eraser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/selector_white_board_action_eraser"
        android:text="@string/white_board_eraser" />

    <Button
        android:id="@+id/white_action_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/selector_white_board_action_clear"
        android:text="@string/white_board_clear" />

    <Button
        android:id="@+id/white_action_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/selector_white_board_action_add"
        android:text="@string/white_board_add" />

    <Button
        android:id="@+id/white_action_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/selector_white_board_action_delete"
        android:text="@string/white_board_delete" />
</LinearLayout>