<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <!-- header view -->
    <RelativeLayout
        android:id="@+id/settings_title_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#3581F2">


        <LinearLayout
            android:id="@+id/settings_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_back"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/connection_settings"
            android:textColor="#ffffff"
            android:textSize="20sp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:onClick="configClick"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginLeft="15dp"
                android:layout_centerInParent="true"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <!--    appkey-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_frameOrientation_Tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_centerVertical="true"
                    android:text="@string/appkey"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_appkey"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_frameOrientation_Tag"
                    android:hint="@string/appkey"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#8C8C8C"
                    android:textSize="15sp" />

            </LinearLayout>

            <!--    appSecrt-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_centerVertical="true"
                    android:text="@string/appsecret"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_appSecret"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:hint="@string/appsecret"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#8C8C8C"
                    android:textSize="15sp" />

            </LinearLayout>

            <!--nav-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_centerVertical="true"
                    android:text="@string/private_navserver_address"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_NavServer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:hint="@string/private_address_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#8C8C8C"
                    android:textSize="15sp" />

            </LinearLayout>

            <!--    apiServer-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_centerVertical="true"
                    android:text="@string/private_server_api_address"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_apiServer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:hint="@string/private_address_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#8C8C8C"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_centerVertical="true"
                    android:text="@string/private_media_server_address"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_media_server"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:hint="@string/private_address_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#8C8C8C"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
